tests/error/effects_errors/return_explicit_callable.err
Error: Type mismatch (at $FILE:11:10)
   | 
 9 | @guppy
10 | def main() -> Callable[[int], int, []]:
11 |    return impure_func
   |           ^^^^^^^^^^^ Expected return value of type `int -[]-> int`, got `int
   |                       -[ANY]-> int`

Guppy compilation failed due to 1 previous error
